# casbin_examle

./: Cargo.toml  README.md  model.csv
src/: main.rs  middle.rs
