[package]
name = "casbin"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-casbin = { version = "1.1.0", default-features = false, features = ["runtime-async-std"] }
actix-casbin-auth = { version = "1.1.0", default-features = false, features = ["runtime-async-std"] }
actix-rt = "2.10.0"
actix-web = "4.10.2"
futures-util = "0.3.31"